--- a/src/styling/task.css
+++ b/src/styling/task.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 50px;
     flex-direction: column;
 }
 .task-form form{
@@ -23,7 +23,7 @@
     color: gray;
 }
 .task-form form button{
-    background-color: rgb(255, 145, 0);
+    background-color: lightblue;
     border: none;
     padding: 10px 0px;
     margin-top: 50px;
