ceated the all users and all projects page

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   justify-content: center;
   flex-direction: column;
 }
-
+.welcome-section{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
+}
